impr(experience): j vision

--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -1,4 +1,6 @@
 <div class="experience filter-transition">
+  <div class="hero experience__background"></div>
+
   <app-timeline class="experience__timeline" (progressHappened)="onProgressChange($event)"></app-timeline>
   <app-tech     class="experience__tech"     [timelineProgress]="timelineProgress"></app-tech>
 </div>
