--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -1,5 +1,5 @@
 <div class="welcome filter-transition">
-  <div class="welcome__background" #background></div>
+  <div class="hero welcome__background" #background></div>
 
   <div class="welcome__container">
     <h1 class="welcome__header">Oskar Dadan</h1>
