--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -11,6 +11,10 @@
 
   // background-color: rgba($color: #000000, $alpha: 0.2);
 
+  &__logo {
+    color: $primary-color;
+  }
+
   &--hamburger-open &__hamburger-stick:nth-of-type(1) {
     transform: translateY(1.8rem) scale(0.5);
     opacity: 0;
