--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -7,10 +7,12 @@
   display: grid;
   // grid-template-rows: repeat(6, 50vh);
   // grid-template-columns: 100%;
-  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(35rem, 1fr));
+  justify-items: center;
   // gap: 2rem;
 
   &__item {
+    width: 35rem;
     padding: 3rem;
   }
 
