--- a/src/app/components/tech/tech.component.scss
+++ b/src/app/components/tech/tech.component.scss
@@ -1,4 +1,10 @@
+@import "colors.scss";
+:host {
+  z-index: 999;
+}
+
 .tech {
+  padding-top: 7rem;
   // border: 1px solid black;
   // border-bottom: none;
   // border-radius: 2rem;
@@ -14,20 +20,23 @@
     margin: 0;
     background-color: rgba(0, 0, 0, 0.2);
     border-radius: 25% 25% 0 0;
+    color: black;
   }
 
   &__header::before, &__header::after {
     content: "";
     width: 100%;
     height: 2px;
-    background-color: #ff3a4a;
+    background-color: black;
   }
 
   &__logo-container {
     display: flex;
+    width: 100%;
     flex: 1;
     justify-content: space-around;
     background-color: rgba(0, 0, 0, 0.2);
+    padding-bottom: 1rem;
   }
 
   &__logo-container-overlay {
@@ -39,7 +48,8 @@
   }
 
   &__logo {
-    width: 17%;
+    // width: 17%;
+    width: 5rem;
     border-style: none;
     transition: opacity 1.5s;
     opacity: 0;
@@ -58,11 +68,12 @@
 @media screen and (min-width: 768px) {
   .tech {
     &__logo {
-      width: 11%;
+      // width: 11%;
+      width: 6rem;
     } 
 
     &__logo-container {
-      padding-bottom: 1rem;
+      // padding-bottom: 1rem;
     }
   }
 }
@@ -70,7 +81,7 @@
 @media screen and (min-width: 1024px) {
   .tech {
     &__logo {
-      width: 5%;
+      // width: 5%;
     }  
   }
 }
