--- a/src/app/components/timeline/timeline.component.scss
+++ b/src/app/components/timeline/timeline.component.scss
@@ -1,18 +1,21 @@
+@import "colors.scss";
+
 .timeline {
   display: grid;
   // grid-template-columns: 30% 70%;
-  grid-template-columns: 12% 88%;
+  grid-template-columns: 20% 80%;
 
   height: 100%;
   padding-top: 5rem;
   padding-bottom: 4rem;
+
+  color: black;
 
   &__line-container {
     height: 130rem;
     grid-column: 1;
     // grid-row: 1/3;
     // margin: 4.5rem;
-    margin: 2.5rem;
     margin-right: 0;
     margin-top: 0;
     margin-bottom: 0;
@@ -22,74 +25,101 @@
   &__line {
     height: 100%;
     position: relative;  
+    border-right: 5px dotted $primary-color;
     // background: linear-gradient(180deg, rgba(0, 0, 0, 0.32) 0%, rgba(255, 70, 85, 0.96) 30%, #ff483f 47%, #6ae981 54%, #67e47e 85%, #00edff 100%);
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0.32) 0%, rgba(185, 50, 157, 0.66) 30%, rgba(198, 63, 236, 0.6) 47%, rgba(106, 233, 129, 0.6) 54%, rgba(103, 228, 126, 0.6) 85%, rgb(0, 237, 255, 0.6) 100%);
+    // background: linear-gradient(180deg, rgba(0, 0, 0, 0.32) 0%, rgba(185, 50, 157, 0.66) 30%, rgba(198, 63, 236, 0.6) 47%, rgba(106, 233, 129, 0.6) 54%, rgba(103, 228, 126, 0.6) 85%, rgb(0, 237, 255, 0.6) 100%);
   }
 
   &__date:nth-child(1) {
+    background-image: url("/assets/stairs-logo.png");
     top: 0%;
   }
   &__date:nth-child(2) {
     top: 20%;
+    background-image: url("/assets/xilo-logo.jpg");
+    background-size: cover;
+    border-radius: 50%
   }
   &__date:nth-child(3) {
     top: 50%;
+    background-image: url("/assets/pb-logo.png");
   }
   &__date:nth-child(4) {
     top: 90%;
+    background-image: url("/assets/laptop-logo.png");
   }
 
   &__line-cover {
     content: "";
     // background-color: brown;
-    width: 100%;
+    width: 0.5rem;
     // height: 70%;
     display: block;
 
     // background-color: rgb(64, 201, 255);
-    background-color: #00edff;
+    background-color: white;
 
     height: 100%;
     // border: ;
     position: absolute;
     top: 0;
-    left: 0;
+    right: 0;
     transform: scaleY(1);
     transform-origin: bottom;
     transition: all 0.3s linear;
+    z-index: 900;
   }
 
   &__line-date {
     position: absolute;
     top: -1rem;
     right: 0;
-    left: calc(50% - 3rem);
+    // left: calc(50% - 3rem);
+    border-right: 5px dotted;
     font-size: 3rem;
+    color: $primary-color;
+    z-index: 9999;
+    // border-radius: 0 0 50%;
   }
 
   &__date {
     position: absolute;
-    left: calc(50% - 2rem);
     opacity: 0;
     font-size: 2rem;
     transition: opacity 1s;
     z-index: 800;
+    background-size: contain;
+    background-repeat: no-repeat;
+
+    right: 1rem;
+    width: 6rem;
+    height: 6rem;
   }
 
   &__line::before {
     content: "";
     position: absolute;
-    bottom: -4rem;
+    // bottom: -4rem;
     display: block;
-    width: 100%;
-    height: 4rem;
+    // width: 100%;
+    // height: 4rem;
     // background-color: #00edff;
-    background-color: rgb(0, 237, 255, 0.6);
-    border-radius: 0% 0% 50% 50%;
+    // background-color: rgb(0, 237, 255, 0.6);
+    // border-radius: 0% 0% 50% 50%;
+    
+    right: -0.5rem;
+    bottom: -3rem;
+    height: 3rem;
+    border-right: 5px dotted $primary-color;
   }
 
   &__list {
     font-size: 2rem;
+    background: linear-gradient(270deg, rgb(255, 255, 255) 0%, rgba(255,255,255,0.6116421568627452) 50%, rgba(255,255,255,0) 100%);
+
+    li {
+      margin-bottom: 1rem;
+    }
   }
 
   &__list:first-of-type {
@@ -130,11 +160,22 @@
   }
 
   &__header {
-    text-align: center;
-    border-bottom: 1px white dotted;
+    text-align: left;
+    // border-bottom: 1px solid $primary-color;
     font-size: 2rem;
-    color: #ffff90;
+    color: $primary-color;
+    padding-left: 2rem;
     margin-top: 0;
+    margin-bottom: 0;
+  }
+
+  &__header-date {
+    padding-left: 2rem;
+    margin-top: 0;
+    font-size: 2rem;
+    font-weight: initial;
+    font-style: italic;
+    color: $primary-color;
   }
 
   &__list {
@@ -144,17 +185,44 @@
  
 @media screen and (min-width: 768px) {
   .timeline {
+    grid-template-columns: 15% 85%;
+
     &__date {
+      left: calc(50% - 4rem);;
       font-size: 4rem;
-      left: calc(50% - 4rem);
+      right: 1rem;
+      width:  10rem;
+      height: 10rem;
     }
 
     &__list {
       font-size: 3rem;
     }
 
+    &__line {
+    }
+
+    &__line::before {
+      height: 8rem;
+      bottom: -8rem;
+      right: -0.5rem;
+    }
+
+    &__line-container {
+      // margin: 2.5rem;
+      width: 100%;
+    }
+
     &__header {
       font-size: 3.5rem;
+    }
+
+    &__header-date {
+      font-size: 2.5rem;
+    }
+
+    &__list {
+      background: unset;
     }
   }
 }
