--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,6 +34,17 @@ h2 {
   min-height: 100vh;
 }
 
+.hero {
+  position: absolute;
+  top:    0;
+  left:   0;
+  right:  0;
+  bottom: 0;
+
+  z-index: -1;
+  overflow: hidden;
+}
+
 .visible {
   opacity: 1 !important;
 }
