impr(projects): j vision

--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -135,7 +135,7 @@
       left:   0;
       right:  0;
       height: 1px;
-      border-bottom: 1px solid gold;
+      border-bottom: 4px solid white;
       opacity: 0;
       transition: opacity 0.5s;
     }
