--- a/src/app/components/welcome/welcome.component.scss
+++ b/src/app/components/welcome/welcome.component.scss
@@ -118,7 +118,7 @@
     }
 
     &__container {
-      align-self: end;
+      align-self: flex-end;
       padding-right: 17rem;
       margin-top: 17rem;
     }
