--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,3 +1,8 @@
 <div class="projects filter-transition">
+  <div class="projects__background hero"></div>
+
+  <div class="projects__header">
+    <h1>MOJE PROJEKTY</h1>
+  </div>
   <app-project *ngFor="let project of projects" class="projects__item" [project]="project"></app-project>
 </div>
