--- a/src/app/components/tech/tech.component.scss
+++ b/src/app/components/tech/tech.component.scss
@@ -49,7 +49,8 @@
 
   &__logo {
     // width: 17%;
-    width: 5rem;
+    width:  5rem;
+    height: 5rem;
     border-style: none;
     transition: opacity 1.5s;
     opacity: 0;
@@ -69,7 +70,8 @@
   .tech {
     &__logo {
       // width: 11%;
-      width: 6rem;
+      width:  6rem;
+      height: 6rem;
     } 
 
     &__logo-container {
