--- a/src/app/components/hobby/hobby.component.html
+++ b/src/app/components/hobby/hobby.component.html
@@ -20,7 +20,7 @@
       <div class="staff__cleff"></div>
     </div>
     <div class="hobby__composing-wrapper">
-      <span class="hobby__composing">Komponuje  <fa-icon [icon]="faPlay" (click)="playMusic()" style="font-size: 2rem;"></fa-icon></span>
+      <fa-icon [icon]="faPlay" (click)="playMusic()" style="font-size: 3rem; padding: 0 1.4rem;"></fa-icon> <span class="hobby__composing">Gram na skrzypcach i komponuje</span>
     </div>
     <div class="staff__row">
       <div class="staff__line">
@@ -38,18 +38,19 @@
       <div class="staff__line"></div>
       <div class="staff__line"></div>
     </div>
-    <div class="hobby__violin-wrapper"><span class="hobby__violin">Gram na skrzypcach</span></div>
+    <div class="hobby__violin-wrapper"><span class="hobby__violin hobby__bike-title">Kolarstwo</span></div>
     <img class="hobby__upper-image" src="/assets/violin.png" />
   </div>
   <div class="hobby__bike">
-    <svg class="hobby__svg" preserveAspectRatio="none" style="position: absolute;top: 0;width: 100%;left: 0;/*! height: 100%; */z-index: 0;border-top: 1rem #4899de dashed;" viewBox="0 0 500 500">
-      <path style="stroke: none; fill:#4899df;/*! border-top: 1px solid white; */" d="M 0 85 C 148 184 350 0 500 18 L 500 0 L 0 0 Z\"></path>
+    <img class="hobby__lower-image" src="/assets/bike.png" />
+    <svg class="hobby__svg" preserveAspectRatio="none" style="position: absolute;top: 0;width: 100%;left: 0;/*! height: 100%; */z-index: 0;" viewBox="0 0 500 500">
+      <path style="stroke: none; fill:white;/*! border-top: 1px solid white; */" d="M 0 85 C 148 184 350 0 500 18 L 500 0 L 0 0 Z\"></path>
     </svg>
     <!-- <path class="hobby__svg" style="stroke: none; fill:#4899df;/*! border-top: 1px solid white; */" d="M 1 85 C 148 184 350 0 500 18 L 500 0 L 0 0 Z\"></path> -->
-    <div class="hobby__music-title hobby__bike-title">Kolarstwo</div>
-    <div class="hobby__bike-fotter">
-      <div>Lubie jezdzic na dluzsze wycieczki rowerow</div>
-      <div>1000+ km w ciagu ostatniego roku</div>
-    </div>
+    <!-- <div class="hobby__music-title hobby__bike-title">Kolarstwo</div> -->
+    <!-- <div class="hobby__bike-fotter"> -->
+      <!-- <div>Lubie jezdzic na dluzsze wycieczki rowerow 1000+ km w ciagu ostatniego roku</div> -->
+      <!-- <div></div> -->
+    <!-- </div> -->
   </div>
 </div>
