impr(app!): mobile adjustments
BREAKING CHANGE: j vision completed

--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -4,5 +4,6 @@
   <div class="projects__header">
     <h1>MOJE PROJEKTY</h1>
   </div>
+  <div class="projects__empty-cell"></div>
   <app-project *ngFor="let project of projects" class="projects__item" [project]="project"></app-project>
 </div>
