--- a/src/app/components/timeline/timeline.component.html
+++ b/src/app/components/timeline/timeline.component.html
@@ -13,14 +13,14 @@
   </div>
   <div class="timeline__info">
     <div class="timeline__beginning" [ngClass]="{ 'visible': progress > 0 }" >
-      <h2 class="timeline__header">Początki programowania</h2>
+      <h2 class="timeline__header">POCZĄTKI PROGRAMOWANIA</h2>
       <h3 class="timeline__header-date">2011</h3>
       <ul class="timeline__list">
         <li>urodzilem sie</li>
       </ul>
     </div> 
     <div class="timeline__xilo" [ngClass]="{ 'visible': progress > 20 }" >
-      <h2 class="timeline__header">XI Liceum (Białystok)</h2>
+      <h2 class="timeline__header">XI LICEUM (BIAŁYSTOK)</h2>
       <h3 class="timeline__header-date">2013 - 2016</h3>
       <ul class="timeline__list">
         <li>profil mat-fiz</li>
@@ -28,7 +28,7 @@
       </ul>
     </div>
     <div class="timeline__pb" [ngClass]="{ 'visible': progress > 50 }" >
-      <h2 class="timeline__header">Politechnika Białostocka</h2>
+      <h2 class="timeline__header">POLITECHNIKA BIAŁOSTOCKA</h2>
       <h3 class="timeline__header-date">2016 - 2020</h3>
       <ul class="timeline__list">
         <li>Nr. 1 w rankingu studentów(2019)</li>
@@ -39,7 +39,7 @@
       </ul>
     </div> 
     <div class="timeline__finish" [ngClass]="{ 'visible': progress > 90 }" >
-      <h2 class="timeline__header">Freelancer</h2>
+      <h2 class="timeline__header">FREELANCER</h2>
       <h3 class="timeline__header-date">2020 - obecnie</h3>
       <ul class="timeline__list">
         <li>Korepetycje</li>
