--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -13,6 +13,15 @@
 
   &__logo {
     color: $primary-color;
+    transition: opacity 0.5s;
+  }
+
+  &--hamburger-open &__logo{
+    opacity: 0;
+  }
+
+  &--hamburger-open &__hamburger-stick {
+    background-color: white;
   }
 
   &--hamburger-open &__hamburger-stick:nth-of-type(1) {
@@ -63,7 +72,7 @@
     // background-color: rgb(72, 153, 223);
     background-color: rgba(72, 153, 223, 0.6);
 
-    transition: all 0.5s;
+    transition: opacity 0.5s visibility 0.5s;
 
     li {
       padding: 2rem;
@@ -106,18 +115,20 @@
   }
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 768px) {
   .navbar {
     &__hamburger {
       display: none;
     }
 
     &__links {
+      opacity: unset;
+      visibility: unset;
+      transition: unset;
+
       height: unset;
       right: unset;
       bottom: unset;
-      opacity: unset;
-      visibility: unset;
 
       flex-direction: row;
       font-size: 2rem;
