--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -13,7 +13,7 @@
   display: grid;
   // grid-template-rows: repeat(6, 50vh);
   // grid-template-columns: 100%;
-  grid-template-columns: repeat(auto-fill, minmax(35rem, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(37rem, 1fr));
   justify-items: center;
   align-items: baseline;
   // gap: 2rem;
@@ -25,31 +25,27 @@
     background-position: left;
     // background-position-y: -6rem;
     background-position-x: -101rem;
-    background-position-y: -1rem;
   }
 
   &__header {
     align-self: flex-start;
     max-width: 50rem;
     padding: 3rem;
-    padding-top: 22rem;
     margin: 0;
     color: $primary-color;
+    word-spacing: 100vw;
 
-    padding-left: 0;
-    margin-left: 4rem;
-    padding-bottom: 0;
-    padding-right: 0;
+    padding: 6rem 3rem 0rem 3rem;
     display: flex;
 
     h1 {
       margin: 0;
       // border-bottom: 5px dotted rgba(23, 54, 81, 0.5);
-      border-left: 1.2rem dotted black;
+      border-left: 0.9rem dotted black;
       text-shadow: -2px 0px 1px rgb(0,0,0), 0px 2px 1px rgb(0,0,0), 2px 0px 1px rgb(0,0,0), 0px -2px 1px rgb(0,0,0);
       color: white;
       letter-spacing: -2px;
-      font-size: 8rem;
+      font-size: 6rem;
       font-weight: normal;
       line-height: 1;
       padding-left: 2rem;
@@ -65,12 +61,36 @@
   &__item:first-of-type {
     padding-top: 6rem;
   }
+
+  &__empty-cell {
+    visibility: hidden;
+    display: none;
+  }
 } 
+
+@media screen and (min-width: 450px) {
+  .projects {
+    grid-template-columns: repeat(auto-fill, minmax(42rem, 1fr));
+  }
+}
 
 @media screen and (min-width: 768px) {
   .projects {
     &__header {
-      grid-column: 1/3;
+      // grid-column: 1/3;
+      // justify-self: baseline;
+    }
+  }
+}
+
+@media screen and (min-width: 840px) {
+  .projects {
+    &__empty-cell {
+      display: block;
+    }
+
+    &__background {
+      background-position-y: -1rem;
     }
   }
 }
@@ -79,15 +99,32 @@
   .projects {
     // grid-template-areas: "p1 line p2";
     // grid-template-columns: 1fr 50px 1fr;
-    grid-template-columns: repeat(3, 1fr);
+    // grid-template-columns: repeat(3, 1fr);
 
-    &__header {
-      grid-column: unset;
-    }
-  }
+
+   }
 
   .line {
     grid-area: line;
     background-color: red;
+  }
+}
+
+@media screen and (min-width: 1260px) {
+  .projects {
+    &__header {
+      grid-column: unset;
+      padding: 25.5rem 0 0 3rem;
+      justify-self: initial;
+
+      h1 {
+        font-size: 8rem;
+        border-left: 1.2rem dotted black;
+      }
+    } 
+
+    &__empty-cell {
+      display: none;
+    }
   }
 }
