--- a/src/app/components/hobby/hobby.component.html
+++ b/src/app/components/hobby/hobby.component.html
@@ -15,7 +15,8 @@
       <div class="staff__notes-wrapper">
         <div *ngFor="let note of notes; let i = index;"
           class="staff__note staff__note--treble staff__note--quarter-down"
-          [ngClass]="{'staff__note--silent':           note.length <  0,
+          [ngClass]="{'staff__note--silent':           note.length == -4,
+                      'staff__note--silent-half':      note.length == -8, 
                       'staff__note--quarter-down':     (note.length == 4 && note.pitch > 4),
                       'staff__note--quarter-up':       (note.length == 4 && note.pitch <= 4),
                       'staff__note--half-down':        (note.length == 8 && note.pitch > 4),
@@ -37,7 +38,7 @@
       <div class="staff__note staff__note--quarter-down staff__note--middle" style="left: 80%"></div> -->
     </div>
     <div class="hobby__composing-wrapper">
-      <fa-icon [icon]="faPlay" (click)="playMusic()" [ngClass]="{ 'invisible': played }" style="transition: all 1s; font-size: 3rem; padding: 0 1.4rem;"></fa-icon> <span class="hobby__composing">Gram na skrzypcach i komponuje</span>
+      <fa-icon [icon]="faPlay" (click)="playMusic()" [ngClass]="{ 'invisible': played, 'cursor-normal': played }" style="transition: all 1s; cursor: pointer; font-size: 3rem; padding: 0 1.4rem;"></fa-icon> <span class="hobby__composing">Gram na skrzypcach i komponuje</span>
     </div>
     <div class="staff__row">
       <div class="staff__line"></div>
@@ -53,7 +54,8 @@
       <div class="staff__notes-wrapper">
         <div *ngFor="let note of notesBass; let i = index;"
           class="staff__note staff__note--bass staff__note--quarter-down"
-          [ngClass]="{'staff__note--silent':           note.length <  0,
+          [ngClass]="{'staff__note--silent':           note.length == -4,
+                      'staff__note--silent-half':      note.length == -8, 
                       'staff__note--quarter-down':     (note.length == 4 && note.pitch > 4),
                       'staff__note--quarter-up':       (note.length == 4 && note.pitch <= 4),
                       'staff__note--half-down':        (note.length == 8 && note.pitch > 4),
