--- a/src/styles.scss
+++ b/src/styles.scss
@@ -53,6 +53,10 @@ h2 {
   opacity: 0 !important;
 }
 
+.cursor-normal {
+  cursor: initial !important;
+}
+
 .filter-transition {
   transition: filter 1s;
 }
