--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -160,3 +160,11 @@
     }
   }
 }
+
+@media screen and (min-width: 1760px) {
+  .navbar {
+    &__links {
+      font-size: 3rem; 
+    }
+  }  
+}
