--- a/src/app/components/project/project.component.scss
+++ b/src/app/components/project/project.component.scss
@@ -20,23 +20,9 @@ mat-card {
     transition: all 0.5s;
   }
 
-  &__img-container:hover {
-    transform: scale(1.3);
-  
-    img {
-      // object-fit: contain;
-      border-radius: 2rem;
-    }
-
-    .project__ball-container{
-      opacity: 1;
-    }
-  }
-
   &__ball-container {
     display: flex;
     justify-content: center;
-    gap: 2rem;
     position: absolute;
     bottom: 1rem;
     left:  0;
@@ -48,6 +34,7 @@ mat-card {
     width: 1rem;
     height: 1rem;
     border-radius: 50%;
+    margin: 0 1rem;
     box-shadow: 0px 0px 2px black;
     background-color: white;
     cursor: pointer;
@@ -122,6 +109,49 @@ mat-card {
   .project {
     &__ball-container {
       opacity: 0;
+    }
+
+    &__img-container:hover {
+      transform: scale(1.3);
+    
+      img {
+        // object-fit: contain;
+        border-radius: 2rem;
+      }
+
+      .project__ball-container{
+        opacity: 1;
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 1760px) {
+  .project {
+    height: 65rem;
+
+    &__header {
+      font-size: 3.5rem;
+    }
+
+    &__tech {
+      width: 4.5rem;
+      top: 0.8rem;
+    }
+
+    &__desc {
+      font-size: 2.5rem;
+    }
+
+    &__try {
+      height: 4rem;
+      display: flex;
+      align-items: center;
+      font-size: 1.7rem;
+    }
+
+    &__github {
+      font-size: 4rem;
     }
   }
 }
