--- a/src/app/components/tech/tech.component.scss
+++ b/src/app/components/tech/tech.component.scss
@@ -87,3 +87,18 @@
     }  
   }
 }
+
+@media screen and (min-width: 1760px) {
+  .tech {
+    padding-top: 10rem;
+
+    &__logo {
+      width: 7rem;
+      height: 7rem;
+    }
+
+    &__header {
+      font-size: 2.5rem;
+    }
+  }
+}
